fix ScrollContainer not stretching child to its height

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -1721,6 +1721,8 @@ $rio-input-box-text-distance-from-bottom: 0.4rem; // To be aligned with the <inp
 .rio-scroll-container-child-container {
     flex-grow: 1;
     overflow-anchor: none;
+
+    @include single-container();
 }
 
 .rio-scroll-container-anchor {
